[package]
build = './common/build/build.rs'
description = 'DHT protocol library'
edition = '2021'
name = 'dht'
version = '0.6.95'

[dependencies]
async-trait = '0.1'
enum-as-inner = '=0.5.1'
failure = '0.1'
hex = '0.4'
log = '0.4'
rand = '0.8'
tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ever-adnl.git', tag = '0.10.0' }
lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
overlay = { git = 'https://github.com/tonlabs/ever-overlay.git', tag = '0.7.26' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = '0.3.61' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.33' }

[features]
telemetry = [ 'adnl/telemetry', 'overlay/telemetry' ]

